# LayerTRAK

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
docs/: design_proposal.md  literature_analysis.md
notebooks/: initial.ipynb
src/layertrak/: data.py  foo.py  main.py  settings.py
src/layertrak/experiments/: __init__.py  results_io.py  run_trak.py  train_base_models.py  train_ensemble.py  trak.py
src/layertrak/lds/: __init__.py  compute_lds.py  extract_ensemble_outputs.py  generate_masks.py  masks.py
src/layertrak/models/: __init__.py  layers.py  mobilenet.py  model_factory.py  resnet.py  train.py
src/layertrak/visualization/: plot_trak_results.py
tests/: test_foo.py  test_plot_trak_results.py
